<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Core.CreatePostActivity"
    android:id="@+id/createPostLL"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:background="@drawable/white_background_border">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/white_background_border">
            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/cpPosterProfileImage"
                        android:src="@drawable/img0"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/post_poster_profile_image_background"
                        android:layout_margin="5dp" />
                    <TextView
                        android:id="@+id/cpPosterName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Full Name"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp"/>
                    <TextView
                        android:id="@+id/cpPosterPosition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Position"
                        android:textSize="14sp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp"/>
                    <ImageButton
                        android:id="@+id/showPostLevelImageButton"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="#ffffff"
                        android:elevation="0dp"
                        android:src="@drawable/ic_public_24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:onClick="showPostLevel"/>
                    <ImageButton
                        android:id="@+id/showTagColleagueImageButton"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="#ffffff"
                        android:elevation="0dp"
                        android:src="@drawable/ic_supervisor_account_black_24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:onClick="showTagColleague"/>
                </LinearLayout>
                <Button
                    android:id="@+id/postButton"
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="match_parent"
                    android:background="@drawable/white_background_no_border"
                    android:text="@string/post"
                    android:onClick="post"
                    android:elevation="0dp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/eventsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/special"
                android:textSize="12sp"
                android:gravity="center_vertical"/>
            <EditText
                android:id="@+id/cpEditText"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                android:background="#FFFFFF"
                android:textColor="#000000"
                android:textSize="16sp"
                android:gravity="start"
                android:hint="@string/post_edit_text_hint" />
            <ImageView
                android:id="@+id/cpImage"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:adjustViewBounds="true"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/optionsLinearLayout"
        android:background="@drawable/white_background_border"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/photoLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="match_parent"
            android:src="@drawable/ic_image_black_24dp"/>
            <TextView
                android:id="@+id/photoLLTextView"
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="match_parent"
                android:text="@string/photo"
                android:textColor="#000000"
                android:textSize="14sp"
                android:gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/includeEventLinearLayout"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="match_parent"
                android:src="@drawable/ic_event_black_24dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="match_parent"
                android:text="@string/include_event"
                android:textColor="#000000"
                android:textSize="14sp"
                android:gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tagColleagueLinearLayout"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="match_parent"
                android:src="@drawable/ic_group_add_black_24dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="match_parent"
                android:text="@string/tag_colleague"
                android:textColor="#000000"
                android:textSize="14sp"
                android:gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/specifyDepartmentLinearLayout"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="match_parent"
                android:src="@drawable/ic_department_black_24dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="match_parent"
                android:text="@string/specify_departments"
                android:textColor="#000000"
                android:textSize="14sp"
                android:gravity="center_vertical"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>